add-main-page-components

--- a/src/pages/authorization/login/login.module.scss
+++ b/src/pages/authorization/login/login.module.scss
@@ -6,5 +6,10 @@
         width: 200px;
         height: 35px;
         margin-bottom: 20px;
+        background: transparent;
+        border: none;
+        border-bottom: 1px solid black;
+        outline: none;
+        font-size: 20px;
     }
 }
